[package]
name = "rustytool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
sysinfo = "*"
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"]}
